src/test/ui/issues/issue-38404.stderr
error[E0038]: the trait `B` cannot be made into an object
  --> $DIR/issue-38404.rs:3:15
   |
LL | trait C<T>: A<dyn B<T, Output=usize>> {}
   |               ^^^^^^^^^^^^^^^^^^^^^^ the trait `B` cannot be made into an object
   |
   = note: the trait cannot use `Self` as a type parameter in the supertraits or where-clauses

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
